# supportflow-ai

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  check_index.py  clear_index.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_chunking.py  test_llm.py  test_retrieval.py  tickets.db
app/: config.py  constants.py  logger.py
app/agents/: Intent_Classifier_Agent.py  escalation_agent.py  knowledge_agent.py  response_agent.py  reviewer_agent.py  sentiment_agent.py  ticket_agent.py
app/api/: main.py
app/crews/: support_crew.py
app/database/: database.py  init_db.py  models.py
app/knowledge/: chunker.py  embedder.py  ingestion.py  pinecone_client.py  retrieval.py
app/models/: api_models.py  escalation.py  intent.py  knowledge.py  response.py
app/repositories/: ticket_repository.py
app/routers/: support.py  ticket.py
app/services/: llm.py  ticket_service.py
app/tasks/: escalation_task.py  intent_task.py  knowledge_task.py  response_task.py
app/tools/: knowledge_retriever_tool.py
app/utils/: ticket_generator.py
docs/: api.md  architecture.md  deployment.md  security_policy.txt  setup.md  technical_policy.txt  workflow.md
frontend/: app.py
frontend/pages/: 0_About.py  1_Dashboard.py  2_Ticket_History.py  3_Analytics.py
frontend/services/: api_client.py
knowledge_base/: billing_policy.txt  login_help.txt  refund_policy.txt  subscription_policy.txt  test_large_doc.txt
