[project]
name = "ai-customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[google-genai]>=1.14.7",
    "fastapi>=0.137.1",
    "google-genai>=1.65.0",
    "google-generativeai>=0.8.6",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=9.1.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
