[project]
name = "supportflow-ai"
version = "1.0.0"
description = "Intelligent Multi-Agent Customer Support Platform powered by CrewAI, Gemini, Pinecone RAG, FastAPI and Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[google-genai]>=1.14.7",
    "fastapi>=0.137.1",
    "google-genai>=1.65.0",
    "google-generativeai>=0.8.6",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=9.1.0",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
